fixed missing color mixins landing/ sign up

--- a/src/pages/SignUp/SignUp.scss
+++ b/src/pages/SignUp/SignUp.scss
@@ -1,5 +1,5 @@
 @use "../../styles/partials/mixins.scss" as *;
-
+@use "../../styles/partials/colors.scss" as *;
 .signup {
   display: flex;
   width: 100%;
@@ -19,7 +19,7 @@
     width: 80%;
     max-width: 900px;
     box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
-    background-color: #478deb;
+    background-color: $primary-color;
   }
  
   &__input-wrapper {
